fixed safari animation as much as possible, transform transition overflow bug in safari makes it look like balls though. disappoint.

--- a/css/logo.less
+++ b/css/logo.less
@@ -27,6 +27,7 @@ body {
   position: relative;
   top: 50vh;
   transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
   border: 1px solid #eee;
   transition: border 0.4s;
   border-radius: 50%;
@@ -52,12 +53,14 @@ body {
   text-align: center;
   position: absolute;
   top: 50%; left: -10%; margin: auto;
-  transform: rotatez(-90deg);
+  transform: rotateZ(-90deg);
+  -webkit-transform: rotateZ(-90deg);
 }
 
 #svgcontainer:hover h2 {
   top: (47.5% - 4em);
   transform: rotatez(-15deg) translateX(10%);
+  -webkit-transform: rotatez(-15deg) translateX(10%);
 }
 
 svg {
@@ -73,9 +76,14 @@ svg {
   transition: 0.4s all;
 }
 
+#svgcontainer svg {
+  -webkit-transform: translate3D(0,0,0) rotateZ(0deg) scale(1);
+}
+
 #svgcontainer:hover svg {
   transform-origin: 50% 50%;
   transform: translateY(-5%) translateX(25%) rotateZ(75deg) scale(4);
+  -webkit-transform: translateY(-5%) translateX(25%) rotateZ(75deg) scale(4);
 }
 
 #svgcontainer path {
